# INF2004

./: CMakeLists.txt  README.md  lwipopts.h  main.c  webserver.c  webserver.h
Attempted_Final_Integration/: CMakeLists.txt  main.c  sd.c  sd.h  webserver.c  webserver.h
Attempted_Final_Integration/src/: packet_handler.c  packet_handler.h  rmii_ethernet.c
Attempted_Final_Integration/src/lwip/: lwipopts.h
Ethernet_Base/src/: config.h  lan8720.c  lan8720.h  main.c
Ethernet_Base/src/lwip/: sys_arch.c
Files/: alert.txt  log_output.txt  webpage.html  webpage2.html
SD Card Contents/: alert.txt  log_output.txt  webpage.html
SD_Card/: CMakeLists.txt  main.c
SD_Card/no-OS-FatFS-SD-SPI-RPi-Pico-master/FatFs_SPI/sd_driver/: hw_config.c
Web_Server/: CMakeLists.txt  main.c  sd.c  sd.h  webserver.c
Working_Partial_Integration/Web_Server/: lwipopts.h  main.c  webserver.c
Working_Partial_Integration/Web_Server/no-OS-FatFS-SD-SPI-RPi-Pico-master/example/tests/: ff_stdio_tests_with_cwd.c
no-OS-FatFS-SD-SPI-RPi-Pico-master/example/tests/: CreateAndVerifyExampleFiles.c  big_file_test.c
webserver/: CMakeLists.txt  webserver.c
